--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Application Page</title>
 
     <!-- CSS Links -->
     <link rel="stylesheet" href="styles/general-styles.css">
@@ -97,7 +97,7 @@
             </div>
             <div class="event-participation-container">
                 <div class="event-participation-top-part">
-                    <h1>Research Publication</h1><i class="fa-solid fa-ellipsis-vertical" style="color: #00156a;"></i>
+                    <h1>Event Participation</h1><i class="fa-solid fa-ellipsis-vertical" style="color: #00156a;"></i>
                 </div>
                 <div class="event-participation-bottom-part">
                     <div class="percentage-container">
@@ -121,16 +121,18 @@
             <div class="latest-research-title-header">
                 <h1>Latest Research Title</h1>
             </div>
-            <table>
-                <tbody>
-                    <tr>
-                        <td><b>Title: </b>Lorem ipsum dolor sit amet, consectetur adipscing elit</td>
-                        <td><b>Status: </b>Ongoing</td>
-                        <td><b>Date Published: </b>N/A</td>
-                        <td><button>Upload</button></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="latest-research-title-table-container">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td><b>Title: </b>Lorem ipsum dolor sit amet, consectetur adipscing elit</td>
+                            <td><b>Status: </b>Ongoing</td>
+                            <td><b>Date Published: </b>N/A</td>
+                            <td><button>Upload</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </body>
