--- a/application-page.html
+++ b/application-page.html
@@ -160,9 +160,10 @@
                 </tr>
             </tbody>
         </table>
-        <div class="load-more-container">
-            <button>Load More +</button>
-        </div>
+    </div>
+    <div class="load-more-container">
+        <button onclick="window.location.href='profile-page.html'">Back</button>
+        <button>Load More +</button>
     </div>
 </body>
 </html>
