--- a/application-page.html
+++ b/application-page.html
@@ -22,7 +22,7 @@
                 <i onclick="toggleMenu()" class="fa-solid fa-bars" style="color: #ffffff;"></i>
                 <div class="navbar-logo-container">
                     <img src="local images/placeholder-img.svg" alt="website logo">
-                    <h1>ReRank</h1>
+                    <h1>AutoRank</h1>
                 </div>
             </div>
             <div class="navbar-right-side">
