--- a/sign-up-page.html
+++ b/sign-up-page.html
@@ -22,7 +22,7 @@
             <div class="navbar-left-side">
                 <div class="navbar-logo-container">
                     <img src="local images/placeholder-img.svg" alt="website logo">
-                    <h1>ReRank</h1>
+                    <h1>AutoRank</h1>
                 </div>
             </div>
         </div>
